feat : interfaces layer redis 대기열 로직 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
+queue:
+  waiting-key: waiting-queues:waiting
+  active-key: waiting-queues:active
 
   springdoc:
     packages-to-scan: com.server.concert_reservation
