--- a/build.gradle
+++ b/build.gradle
@@ -32,14 +32,23 @@ dependencies {
     // redisson
     implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'
 
-    //redis
+    // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // retry
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.springframework:spring-aspects'
 
-    //Querydsl 추가
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.testcontainers:kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+    // mysql
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    testImplementation 'org.testcontainers:mysql'
+
+    // Querydsl
     implementation 'com.querydsl:querydsl-core:5.0.0'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     implementation group: 'com.querydsl', name: 'querydsl-collections', version: '5.0.0'
@@ -48,12 +57,10 @@ dependencies {
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:mysql'
     testImplementation 'org.instancio:instancio-junit:5.3.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
